--- a/src/App.css
+++ b/src/App.css
@@ -174,4 +174,5 @@ p {
   background-color: rgb(242, 242, 242);
   font-family: "Open Sans", sans-serif;
   border: 1px solid rgb(0, 191, 225);
+  margin-top: 30px;
 }
