--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,9 @@ p {
   border: 1px solid rgb(0, 191, 225);
   margin-top: 30px;
 }
+
+.createheader {
+  font-family: "Open Sans", sans-serif;
+  color: black;
+  font-weight: bold;
+}
